--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# OS-specific ignores
+.DS_Store
+Thumbs.db
